--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
-  "name": "testmapper",
+  "name": "tests-mapper",
   "version": "1.0.0",
-  "description": "",
+  "description": "Tests mapper for processes blueprints.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage",
+    "lint": "eslint ./src --ext .js --max-warnings=0",
+    "lint:fix": "eslint ./src --ext .js --max-warnings=0 --fix"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pedropereiraassis/tests-mapper.git"
+  },
+  "keywords": [
+    "tests",
+    "paths",
+    "processes",
+    "blueprints"
+  ],
+  "author": "Pedro Assis",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/pedropereiraassis/tests-mapper/issues"
+  },
+  "homepage": "https://github.com/pedropereiraassis/tests-mapper#readme",
   "dependencies": {
     "cytoscape": "3.22.1",
     "cytoscape-all-paths": "0.1.0",
-    "k-shortest-path": "0.0.5",
     "lodash": "4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "8.23.0",
+    "jest": "29.0.2"
   }
 }
