--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blueprint-tests-mapper",
+  "name": "blueprints-tests-mapper",
   "version": "0.1.0",
   "description": "Tests mapper for processes blueprints.",
   "main": "index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pedropereiraassis/blueprint-tests-mapper.git"
+    "url": "https://github.com/pedropereiraassis/blueprints-tests-mapper.git"
   },
   "keywords": [
     "tests",
@@ -21,9 +21,9 @@
   "author": "Pedro Assis",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pedropereiraassis/blueprint-tests-mapper/issues"
+    "url": "https://github.com/pedropereiraassis/blueprints-tests-mapper/issues"
   },
-  "homepage": "https://github.com/pedropereiraassis/blueprint-tests-mapper#readme",
+  "homepage": "https://github.com/pedropereiraassis/blueprints-tests-mapper#readme",
   "dependencies": {
     "cytoscape": "3.22.1",
     "cytoscape-all-paths": "0.1.0",
