--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "jest --coverage",
     "lint": "eslint ./src --ext .js --max-warnings=0",
-    "lint:fix": "eslint ./src --ext .js --max-warnings=0 --fix"
+    "lint:fix": "eslint ./src --ext .js --max-warnings=0 --fix",
+    "get-version": "echo $npm_package_version",
+    "release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,9 @@
   ],
   "author": "Pedro Assis",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "bugs": {
     "url": "https://github.com/pedropereiraassis/blueprints-tests-mapper/issues"
   },
@@ -30,7 +35,12 @@
     "lodash": "4.17.21"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "6.0.1",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/npm": "9.0.1",
+    "conventional-changelog-conventionalcommits": "5.0.0",
     "eslint": "8.23.0",
-    "jest": "29.0.2"
+    "jest": "29.0.2",
+    "semantic-release": "19.0.5"
   }
 }
